B&L QA/objects/Case_Note__c.object
<CustomObject>
    <description>For Product Complaints, synchronizes with the Notes table in CW.</description>
    <fields>
        <fullName>CATSWeb_Complaint_Number__c</fullName>
        <description>For Product Complaints</description>
        <formula>Case__r.CATSWeb_Complaint_Number__c</formula>
        <label>CATSWeb Complaint Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ID_18__c</fullName>
        <description>For Product Complaints, need the 18-digit ID for the related case to send in Outbound Messages.</description>
        <formula>Case__r.ID_18__c</formula>
        <label>Case ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Case</description>
        <label>Case (Do not edit)</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Notes</relationshipLabel>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Assigned_To__c</fullName>
        <description>For Product Complaints</description>
        <formula>Case__r.Employee_Assigned_To__c</formula>
        <label>Employee Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <description>For Product Complaints, need the 18-digit value of the ID for outbound messages</description>
        <formula>Id&amp;
CASE(
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,3),1)),4,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,4),1)),8,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,5),1)),16,0),
0,&quot;A&quot;,1,&quot;B&quot;,2,&quot;C&quot;,3,&quot;D&quot;,4,&quot;E&quot;,5,&quot;F&quot;,6,&quot;G&quot;,7,&quot;H&quot;,8,&quot;I&quot;,
9,&quot;J&quot;,10,&quot;K&quot;,11,&quot;L&quot;,12,&quot;M&quot;,13,&quot;N&quot;,14,&quot;O&quot;,15,&quot;P&quot;,16,&quot;Q&quot;,17,&quot;R&quot;,
18,&quot;S&quot;,19,&quot;T&quot;,20,&quot;U&quot;,21,&quot;V&quot;,22,&quot;W&quot;,23,&quot;X&quot;,24,&quot;Y&quot;,25,&quot;Z&quot;,26,&quot;0&quot;,
27,&quot;1&quot;,28,&quot;2&quot;,29,&quot;3&quot;,30,&quot;4&quot;,31,&quot;5&quot;,&quot;0&quot;)&amp;
&quot;A&quot;&amp;
CASE(
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,11),1)),1,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,12),1)),2,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,13),1)),4,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,14),1)),8,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,15),1)),16,0),
0,&quot;A&quot;,1,&quot;B&quot;,2,&quot;C&quot;,3,&quot;D&quot;,4,&quot;E&quot;,5,&quot;F&quot;,6,&quot;G&quot;,7,&quot;H&quot;,8,&quot;I&quot;,
9,&quot;J&quot;,10,&quot;K&quot;,11,&quot;L&quot;,12,&quot;M&quot;,13,&quot;N&quot;,14,&quot;O&quot;,15,&quot;P&quot;,16,&quot;Q&quot;,17,&quot;R&quot;,
18,&quot;S&quot;,19,&quot;T&quot;,20,&quot;U&quot;,21,&quot;V&quot;,22,&quot;W&quot;,23,&quot;X&quot;,24,&quot;Y&quot;,25,&quot;Z&quot;,26,&quot;0&quot;,
27,&quot;1&quot;,28,&quot;2&quot;,29,&quot;3&quot;,30,&quot;4&quot;,31,&quot;5&quot;,&quot;0&quot;)</formula>
        <label>ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Email__c</fullName>
        <description>For Product Complaints, need to know the Last Modified By email address, so that any errors can be sent to the user who needs them</description>
        <formula>LastModifiedBy.Email</formula>
        <label>Last Modified By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Body_Local__c</fullName>
        <label>Note Body (Local)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Body__c</fullName>
        <label>Note Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Edit_Prior_Value__c</fullName>
        <description>Holds the prior value of the Reason for Edit</description>
        <label>Reason for Edit Prior Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Edit__c</fullName>
        <label>Reason for Edit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_CATSWeb__c</fullName>
        <description>For Product Complaints, this tells the workflow whether or not to send the record to CATSWeb.  Value set to Yes when Case is sent to CW and a CW Complaint Number is returned.</description>
        <label>Send to CATSWeb</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Case Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ProductComplaint_CaseClosed</fullName>
        <active>true</active>
        <description>If the Case is closed, then no Notes can be added or modified.</description>
        <errorConditionFormula>and(
  $User.Profile__c &lt;&gt; &quot;BL: Integration User&quot;,
  IsPickVal(Case__r.Status, &quot;Closed&quot;),
  NOT(IsNull(Case__r.Complaint_Action_ID__c))
)</errorConditionFormula>
        <errorMessage>Once a Product Complaint has been closed, no additional changes may be made. The Product Complaint can be reopened in CATSWeb.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductComplaint_EditDeleteNotAllowed</fullName>
        <active>true</active>
        <description>For product complaint notes, only allow the user that created the note update or delete it.</description>
        <errorConditionFormula>and (
  Not(IsNew()), 
  CreatedBy.Id &lt;&gt; $User.Id, 
  Not($User.Profile__c = &quot;BL: Integration User&quot;),
  Not($User.Profile__c = &quot;BL: System Admin SSO&quot;)
)</errorConditionFormula>
        <errorDisplayField>Note_Body__c</errorDisplayField>
        <errorMessage>Only the person that created this Case Note can modify or delete it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductComplaint_ReasonForEditRequired</fullName>
        <active>true</active>
        <description>For Product Complaints, all changes to Case Notes require a Reason for Edit to be Entered.</description>
        <errorConditionFormula>and (
  Not($User.Profile__c = &quot;BL: Integration User&quot;),
  Not(IsNew()),
  Case__r.CATSWeb_Complaint_Number__c &lt;&gt; &quot;&quot;,
  Reason_for_Edit_Prior_Value__c = &quot;&quot; 
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Edit__c</errorDisplayField>
        <errorMessage>All changes to Case Notes require a Reason for Edit once the Complaint has been sent to CATSWeb.</errorMessage>
    </validationRules>
</CustomObject>